--- a/PFD_Assignment/Views/Guide/_ViewGuides.cshtml
+++ b/PFD_Assignment/Views/Guide/_ViewGuides.cshtml
@@ -1,5 +1,7 @@
 ﻿@model PFD_Assignment.Models.PostIndexViewModel
 
+<img class="bgimg" src="~/images/sgbackground2.jpg"></img>
+
 <h2 class="PageTitle" style="font-weight:bold; font-size:60px">Guides</h2>
 
 <!-- Featured Posts -->
