view guides on admin end

--- a/PFD_Assignment/Views/Shared/_AdminMenu.cshtml
+++ b/PFD_Assignment/Views/Shared/_AdminMenu.cshtml
@@ -34,7 +34,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="~/Admin/PinGuides">
+                    <a class="nav-link" href="~/Admin/PinGuide">
                         Guides
                     </a>
                 </li>
