--- a/PFD_Assignment/Views/Admin/_ViewAnnouncements.cshtml
+++ b/PFD_Assignment/Views/Admin/_ViewAnnouncements.cshtml
@@ -22,7 +22,7 @@
                 </div>
 
                 <div class="guidebuttonposition" id="guidebuttonposition">
-                    <a asp-action="GuideDetails" asp-controller="Admin" asp-route-id="@item.AnnouncementID">
+                    <a asp-action="Delete" asp-controller="Admin" asp-route-id="@item.AnnouncementID">
                         <button class="guideButton" id="guideButton" style="color: red">
                             Delete
                         </button>
