--- a/PFD_Assignment/Views/Admin/_ViewAnnouncements.cshtml
+++ b/PFD_Assignment/Views/Admin/_ViewAnnouncements.cshtml
@@ -22,17 +22,19 @@
                 </div>
 
                 <div class="guidebuttonposition" id="guidebuttonposition">
-                    <a asp-action="Delete" asp-controller="Admin" asp-route-id="@item.AnnouncementID">
-                        <button class="guideButton" id="guideButton" style="color: red">
+                    <form asp-action="Delete" asp-controller="Admin" method="post" style="display: inline;">
+                        <input type="hidden" name="AnnouncementID" value="@item.AnnouncementID" />
+                        <button type="submit" class="guideButton" id="deleteGuideButton" style="color: red">
                             Delete
                         </button>
-                    </a>
+                    </form>
                     <a asp-action="GuideDetails" asp-controller="Guide" asp-route-id="@item.AnnouncementID">
-                        <button class="guideButton" id="guideButton">
+                        <button class="guideButton" id="viewGuideButton">
                             View
                         </button>
                     </a>
                 </div>
+
             </div>
         }
     </div>
@@ -40,4 +42,12 @@
 else
 {
     <span style="color: black; font-size: 20px; font-weight: bold;">No announcements found!</span>
+}
+
+
+@if (TempData["updateMessage"] != null)
+{
+    <script>
+        alert('@TempData["updateMessage"]');
+    </script>
 }
