--- a/PFD_Assignment/Views/Home/Profile.cshtml
+++ b/PFD_Assignment/Views/Home/Profile.cshtml
@@ -36,6 +36,14 @@
                     <hr class="solid" style="margin-top: 38px;" />
                     <div class="row">
                         <div class="col-md-11">
+                            <h6 style="font-weight: bold;">Member Status</h6>
+                            <p style="padding-top: 5px;">@ViewData["Status"]</p>
+                        </div>
+                    </div>
+                    <hr class="solid" />
+
+                    <div class="row">
+                        <div class="col-md-11">
                             <h6 style="font-weight: bold;">Username</h6>
                             <p style="padding-top: 5px;">@ViewData["Username"]</p>
                         </div>
