showing member status in view guides

--- a/PFD_Assignment/Views/Guide/_ViewGuides.cshtml
+++ b/PFD_Assignment/Views/Guide/_ViewGuides.cshtml
@@ -16,13 +16,16 @@
                 <div class="featuredguide">
                     <div>
                         <p class="guideUser">
-                            <b> @post.Username.ToString() </b>| @post.DateofPost.ToString()
+                            <b> @post.Username.ToString() </b>| @post.Status.ToString()
                         </p>
                         <p class="guidePara">
                             Title: @post.PostTitle.ToString()
                         </p>
                         <p class="guidePara">
                             Description: @post.PostDesc.ToString()
+                        </p>
+                        <p class="guideUser">
+                            @post.DateofPost.ToString()
                         </p>
 
                     </div>
@@ -59,13 +62,16 @@
             <div class="guides" id="guides" data-date="@post.DateofPost.ToString()" data-likes="@post.Upvote">
                 <div>
                     <p class="guideUser">
-                        <b> @post.Username.ToString() </b>| @post.DateofPost.ToString()
+                        <b> @post.Username.ToString() </b>| @post.Status.ToString()
                     </p>
                     <p class="guidePara">
                         Title: @post.PostTitle.ToString()
                     </p>
                     <p class="guidePara">
                         Description: @post.PostDesc.ToString()
+                    </p>
+                    <p class="guideUser">
+                        @post.DateofPost.ToString()
                     </p>
 
                 </div>
