author level in guide details

--- a/PFD_Assignment/Views/Guide/GuideDetails.cshtml
+++ b/PFD_Assignment/Views/Guide/GuideDetails.cshtml
@@ -3,7 +3,7 @@
 <div class=" container" style="padding-top: 10px ">
     <h4 class="posttitle" style="text-align:center;">@Html.Display("Post.PostTitle")</h4>
     <div class="postdetails">
-        <p>Author: @Html.Display("Username") </p>
+        <p>Author: @Html.Display("Username") | Level: @Html.Display("Status") </p>
         <p>Date: @Html.Display("Post.DateofPost") </p>
     </div>
     <hr style="margin-bottom:30px;"/>
