delete featured post function for admin(half)

--- a/PFD_Assignment/Views/Admin/PinGuide.cshtml
+++ b/PFD_Assignment/Views/Admin/PinGuide.cshtml
@@ -33,7 +33,7 @@
 						<td>@featuredPost.Downvote</td>
 						<td>
                             <a asp-action="GuideDetails" asp-controller="Guide" asp-route-id="@featuredPost.PostID">Details</a> |
-							<a asp-action="Delete" asp-controller="Admin" asp-route-id="@featuredPost.PostID">Delete</a>
+                            <a asp-action="DeleteFeaturedGuide" asp-controller="Guide" asp-route-id="@featuredPost.PostID">Delete</a>
 						</td>
 					</tr>
 				}
