--- a/PFD_Assignment/Views/Guide/GuideDetails.cshtml
+++ b/PFD_Assignment/Views/Guide/GuideDetails.cshtml
@@ -12,6 +12,7 @@
         <iframe src="@Model.Post.VideoLink" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     }
     <div class="postcontent">
+        <!--@Html.Raw(Model.Post.PostContent.Replace("\n", "<br>"))-->
         @Html.Display("Post.PostContent")
     </div>
 </div> 
