added class container to admin panel

--- a/PFD_Assignment/Views/Admin/CreateAnnounce.cshtml
+++ b/PFD_Assignment/Views/Admin/CreateAnnounce.cshtml
@@ -6,7 +6,7 @@
 
 <form asp-action="CreateAnnounce">
 
-    <fieldset class="FormContent">
+    <fieldset class="FormContent container">
         <div class="row mb-3 create-fields">
             <label asp-for="AnnouncementTitle" class="col-sm-3 col-form-label"></label>
             <div class="col-sm-9 col-md-5">
