--- a/PFD_Assignment/Views/Admin/_ViewAnnouncements.cshtml
+++ b/PFD_Assignment/Views/Admin/_ViewAnnouncements.cshtml
@@ -8,7 +8,7 @@
 
 @if (Model.Count() > 0)
 {
-    <div class="guidecontent" id="guidecontent">
+    <div class="guidecontent container" id="guidecontent">
         @foreach (var item in Model)
         {
             <div class="guides" id="guides">
