--- a/PFD_Assignment/Views/Admin/PinGuide.cshtml
+++ b/PFD_Assignment/Views/Admin/PinGuide.cshtml
@@ -28,15 +28,13 @@
                 @foreach (var featuredPost in Model.FeaturedPosts)
                 {
                     <tr>
-                            <td>@featuredPost.FeaturedPostID</td>
-
                         <td>@featuredPost.PostTitle</td>
                         <td>@featuredPost.PostContent</td>
                         <td>@featuredPost.Upvote</td>
                         <td>@featuredPost.Downvote</td>
                         <td>
                             <a asp-action="GuideDetails" asp-controller="Guide" asp-route-id="@featuredPost.PostID">Details</a> |
-                            <a href="#" data-toggle="modal" data-target="#deleteConfirmationModal" data-post-id="@featuredPost.FeaturedPostID" class="pinButton">Delete</a>
+                            <a href="#" data-toggle="modal" data-target="#deleteConfirmationModal" data-featured-post-id="@featuredPost.FeaturedPostID" class="deleteButton">Delete</a>
                         </td>
                     </tr>
                 }
@@ -113,20 +111,20 @@
     </div>
 
     <!-- Delete Pin Confirmation Modal -->
-    <div class="modal fade" id="deleteConfirmationModal" tabindex="-1" role="dialog" aria-labelledby="pinConfirmationModalCenterTitle" aria-hidden="true">
+    <div class="modal fade" id="deleteConfirmationModal" tabindex="-1" role="dialog" aria-labelledby="deleteConfirmationModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <form asp-action="DeleteFeaturedGuide" asp-controller="Guide" method="post">
-                    @Html.AntiForgeryToken() <!-- Include anti-forgery token -->
+                    @Html.AntiForgeryToken()
                     <div class="modal-header">
-                        <h5 class="modal-title" id="pinModalLongTitle">Remove as Featured Post</h5>
+                        <h5 class="modal-title" id="deleteModalLongTitle">Remove as Featured Post</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="modal-body">
                         Are you sure you want to remove this as a featured post?
-                        <input type="hidden" name="postId" id="modalPostId" value="" />
+                        <input type="hidden" name="postId" id="featuredPostIdInput" value="" />
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
@@ -136,6 +134,7 @@
             </div>
         </div>
     </div>
+
 </div>
 @if (TempData["updateMessage"] != null)
 {
@@ -197,5 +196,14 @@
             // Set the value of the hidden input in the modal
             $('#modalPostId').val(postId);
         });
+
+        $('.deleteButton').click(function () {
+            // Get the 'data-featured-post-id' attribute value of the clicked link
+            var featuredPostId = $(this).data('featured-post-id');
+
+            // Set the value of the hidden input in the delete modal
+            $('#featuredPostIdInput').val(featuredPostId);
+        });
+
     });
 </script>
