--- a/PFD_Assignment/Views/Home/Index.cshtml
+++ b/PFD_Assignment/Views/Home/Index.cshtml
@@ -29,8 +29,8 @@
         <img class="bgimg" src="~/images/sgbackground.jpg"></img>
         <div class="content">
             <h2 id="title" class="title" style="font-size:50px"><b>SG Handbook</b></h2>
-            <p class="para" style="font-size:23px;">
-                A simple one stop handbook for the elderly
+            <p class="para" , style="font-weight: bold;">
+                You have questions, we have the answers
             </p>
 
         </div>
