--- a/PFD_Assignment/Views/Guide/Index.cshtml
+++ b/PFD_Assignment/Views/Guide/Index.cshtml
@@ -10,7 +10,7 @@
     <div class="col-sm-3">
         <div class="position-sticky" style="position: sticky;top:0px;">
         <h2 hidden>Guides</h2>
-        <h2 style="padding-left: 10px;">Create a guide</h2>
+        <h2 style="padding-left: 10px;padding-top:10px">Create a guide</h2>
         <hr style="border-top: dotted 2px; margin-left: 10px;" />
         <a asp-action="Create" class="createguide-button">Create New Guide</a>
         <hr style="border-top: dotted 2px; margin-left: 10px;" />
